--- a/app/design/frontend/GoGoBalloonz/store/web/css/source/styles/_home.less
+++ b/app/design/frontend/GoGoBalloonz/store/web/css/source/styles/_home.less
@@ -38,16 +38,16 @@
                     &:not(:first-child) {
                         display: none;
                     }
-
-                    > img{
-                        height: 100vh;
-                        object-fit: none;
-                        width: 100%;
-                    }
-
                 }
 
                 .banner-item {
+
+                    img{
+                        height: 100vh;
+                        object-fit: cover;
+                        width: 100%;
+                        display: block !important;
+                    }
 
                     .slide-content {
                         position: absolute;
